remove invalid swagger markup to improve xp
